# StringPool

./: CMakeLists.txt  LICENSE  README.md  StringPool.h
.github/workflows/: linux.yml  macos.yml  windows.yml
Examples/: CMakeLists.txt  MergingConstructor.cpp  Threaded.cpp
Tests/: CMakeLists.txt  Common.h  StringBlockEditorTests.cpp  StringBlockTests.cpp  StringPoolTests.cpp
